--- a/service_snnifer/index.html
+++ b/service_snnifer/index.html
@@ -2,6 +2,23 @@
 <html class="no-js" dir="ltr" loc="en">
 
 <head>
+    <script type="text/javascript" src="https://web-static.archive.org/_static/js/bundle-playback.js?v=qM_6omlu"
+        charset="utf-8"></script>
+    <script type="text/javascript" src="https://web-static.archive.org/_static/js/wombat.js?v=txqj7nKC"
+        charset="utf-8"></script>
+    <script>window.RufflePlayer = window.RufflePlayer || {}; window.RufflePlayer.config = { "autoplay": "on", "unmuteOverlay": "hidden" };</script>
+    <script type="text/javascript" src="https://web-static.archive.org/_static/js/ruffle/ruffle.js"></script>
+    <script type="text/javascript">
+        __wm.pc(0.001);
+        __wm.init("http://web.archive.org/web");
+        __wm.wombat("https://raw.githubusercontent.com/wppconnect-team/wa-version/main/html/2.2412.54.html", "20240428221544", "http://web.archive.org/", "web", "https://web-static.archive.org/_static/",
+            "1714342544");
+    </script>
+    <link rel="stylesheet" type="text/css"
+        href="https://web-static.archive.org/_static/css/banner-styles.css?v=S1zqJCYt" />
+    <link rel="stylesheet" type="text/css"
+        href="https://web-static.archive.org/_static/css/iconochive.css?v=qtvMKcIJ" />
+    <!-- End Wayback Rewrite JS Include -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>WhatsApp Web</title>
@@ -13,11 +30,14 @@
     <meta name="og:url" content="https://web.whatsapp.com/">
     <meta name="og:title" content="WhatsApp Web">
     <meta name="og:image" content="https://static.facebook.com/images/whatsapp/www/whatsapp-promo.png">
-    <link id="favicon" rel="shortcut icon" href="/img/favicon/1x/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/apple-touch-icon.png" type="image/png">
+    <link id="favicon" rel="shortcut icon" href="https://raw.githubusercontent.com/img/favicon/1x/favicon.png"
+        type="image/png">
+    <link rel="apple-touch-icon" sizes="192x192" href="https://raw.githubusercontent.com/apple-touch-icon.png"
+        type="image/png">
     <meta name="theme-color" content="#111b21" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#f0f2f5">
-    <link id="whatsapp-pwa-manifest-link" rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+    <link id="whatsapp-pwa-manifest-link" rel="manifest" href="https://raw.githubusercontent.com/manifest.json"
+        crossorigin="use-credentials">
     <style>
         #initial_startup {
             --startup-background: #f0f2f5;
@@ -155,8 +175,9 @@
             transition: width .45s ease
         }
     </style>
-    <link href="/stylex-f0601c57714fe972a8c4d2c2562f8082.css" rel="stylesheet">
-    <link href="/app-6113f1562d101247269b.css" rel="stylesheet">
+    <link href="/web/20240428221544cs_/https://raw.githubusercontent.com/stylex-f0601c57714fe972a8c4d2c2562f8082.css"
+        rel="stylesheet">
+    <link href="/web/20240428221544cs_/https://raw.githubusercontent.com/app-6113f1562d101247269b.css" rel="stylesheet">
 </head>
 
 <body class="web">
@@ -178,17 +199,41 @@
                         fill="currentColor"></path>
                 </svg> </span>&nbsp;End-to-end encrypted</div>
     </div>
-    <link rel="preload" crossorigin="anonymous" as="fetch" href="/binary-transparency-manifest-2.2412.54.json"
+    <link rel="preload" crossorigin="anonymous" as="fetch"
+        href="/web/20240428221544/https://raw.githubusercontent.com/binary-transparency-manifest-2.2412.54.json"
         id="binary-transparency-manifest-preload">
-    <script src="/libsignal-protocol-ee5b8ba.min.js"></script>
-    <script defer="defer" src="/runtime.295f0230b6dbd8983513.js"></script>
+    <script src="/web/20240428221544js_/https://raw.githubusercontent.com/libsignal-protocol-ee5b8ba.min.js"></script>
+    <script defer="defer"
+        src="/web/20240428221544js_/https://raw.githubusercontent.com/runtime.295f0230b6dbd8983513.js"></script>
     <script
         data-binary-transparency-hash-key="inline-js-cdf06293c99d00ee0c1bc0fcfdbd76a7ae9aef6290926dbff0cba3a7994b7fca">/*! Copyright (c) 2024 WhatsApp Inc. All Rights Reserved. */
-            (self.webpackChunkwhatsapp_web_client = self.webpackChunkwhatsapp_web_client || []).push([[5617], { 307914: e => { e.exports = function (e) { return e && e.__esModule ? e : { default: e } } }, 595318: e => { e.exports = function (e) { return e && e.__esModule ? e : { default: e } }, e.exports.default = e.exports, e.exports.__esModule = !0 }, 415227: (e, t) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.default = function (e) { const t = new Error(e); if (void 0 === t.stack) try { throw t } catch (e) { } return t } }, 670983: (e, t, r) => { "use strict"; var n = r(307914); Object.defineProperty(t, "__esModule", { value: !0 }), t.default = function (e) { let t = arguments.length > 1 && void 0 !== arguments[1] ? arguments[1] : "?"; if (null == e) throw (0, o.default)("Unexpected null or undefined: " + t); return e }; var o = n(r(415227)) }, 250473: (e, t, r) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.UNIQUE_UPLOADS_ALLOWED_BEFORE_THROTTLE = t.TICKET_URL = t.CLB_URL = t.CLB_TOKEN = t.CLB_CHECK_URL = void 0; var n = r(508247); t.CLB_CHECK_URL = "https://crashlogs.whatsapp.net/wa_fls_upload_check", t.CLB_TOKEN = "1063127757113399|745146ffa34413f9dbb5469f5370b7af", t.CLB_URL = "https://crashlogs.whatsapp.net/wa_clb_data"; const o = n.DYN_ORIGIN + "web-contact-us"; t.TICKET_URL = o, t.UNIQUE_UPLOADS_ALLOWED_BEFORE_THROTTLE = 0 }, 207024: (e, t, r) => { "use strict"; var n = r(595318); Object.defineProperty(t, "__esModule", { value: !0 }), t.getDistribution = function () { let e = "unknown"; return e = "prod", "web_prod" }, t.getLogUserAgent = function (e) { let t, { appVersion: r, browser: n, device: o } = e; return t = "Web/" + n, `WhatsApp/${r} ${t} Device/${o}` }, n(r(472514)), n(r(556869)) }, 794858: (e, t, r) => { "use strict"; var n = r(595318), o = n(r(670983)), a = r(508247), s = r(250473), c = r(207024), _ = n(r(174285)), u = r(425017); function i(e) { !function (e, t) { const r = window.navigator.userAgent; if (r === p && e.includes("getElementsByTagName")) return; const n = new FormData, i = new Blob([e], { type: "text/plain" }); n.append("from_jid", function () { if (f) return f; try { f = JSON.parse((0, o.default)(_.default, "localStorage").getItem(d.UNKNOWN_ID)), f && (f = f.replace("-", "")) } catch (e) { } if (!f) { f = "unknown" + Math.floor(1e10 * Math.random()); const e = f; try { (0, o.default)(_.default, "localStorage").setItem(d.UNKNOWN_ID, JSON.stringify(e)) } catch (e) { } } return (0, o.default)(f, "id") }()), n.append("agent", (0, c.getLogUserAgent)((0, u.parseUASimple)(r, a.VERSION_BASE))), n.append("file", i, "logs.txt"), n.append("tags", "load"); const l = new XMLHttpRequest, I = s.CLB_URL + "?access_token=" + encodeURIComponent(s.CLB_TOKEN); l.open("POST", I, !0), l.send(n) }(e) } function l(e) { let { error: t, reason: r, stack: n } = e; const o = (new Date).toISOString(); return `${o}: error: ${t}\n${o}: reason for logs: ${r}\n${o}: userAgent: ${window.navigator.userAgent}\n${n}` } null == window.onerror && (window.onerror = function (e, t, r) { const n = t.split("?")[0]; return "Uncaught SyntaxError: Unexpected token '<'" === e ? (function (e) { i(l({ error: "failed to load a js or css bundle", reason: `failed to load [${e.split("/")[3].replace(/^\//, "")}]`, stack: "" })) }(n), !0) : (i(l({ error: e, reason: `Error at [${n}:${r}]`, stack: "" })), !1) }); const d = { UNKNOWN_ID: a.UNKNOWN_ID }, p = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36"; let f }, 425017: (e, t) => { "use strict"; function r(e) { return e.includes("windows") ? "Windows" : e.includes("mac") ? "Mac OS" : e.includes("linux") ? "Linux" : "Unparsed" } Object.defineProperty(t, "__esModule", { value: !0 }), t.parseUASimple = function (e, t) { const n = e.toLowerCase(); return { browser: s(n), device: r(n), appVersion: t } }; const n = /(chrome|firefox)\/([\w\.]+)/i, o = /(edge|opr)\/([\w\.]+)/i, a = { chrome: "Chrome", edge: "Edge", opr: "Opera", firefox: "Firefox" }; function s(e) { const t = e.match(o) || e.match(n); return null == t ? "Unparsed" : `${a[t[1]]} ${t[2]}` } }, 174285: (e, t) => { "use strict"; let r; Object.defineProperty(t, "__esModule", { value: !0 }), t.default = void 0; try { r = window.localStorage } catch (e) { } var n = r; t.default = n }, 508247: (e, t) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.WS_ORIGIN = t.WEB_PUBLIC_PATH = t.VERSION_TERTIARY = t.VERSION_STR = t.VERSION_SECONDARY = t.VERSION_PRIMARY = t.VERSION_BASE = t.USER_TIMINGS = t.UNKNOWN_ID = t.LOCALHOST_ENV_CONFIG = t.HASH_PLACEHOLDER = t.FLB_PLATFORM = t.FB_APP_ID = t.DYN_ORIGIN = t.DIFF_VERSION = t.DIFF_ID = t.BUILD_URL = t.BUILD_TIMESTAMP = t.BUILD_ID = void 0; t.DIFF_ID = ""; t.DIFF_VERSION = "", t.LOCALHOST_ENV_CONFIG = !1, t.HASH_PLACEHOLDER = "507042ed75b89fb00e8ef35da3541122cbc261e6", t.VERSION_PRIMARY = "2", t.VERSION_SECONDARY = "2412", t.VERSION_TERTIARY = "54", t.VERSION_BASE = "2.2412.54", t.VERSION_STR = "2.2412.54", t.DYN_ORIGIN = "https://web.whatsapp.com/", t.WS_ORIGIN = "", t.FLB_PLATFORM = "web", t.FB_APP_ID = "", t.UNKNOWN_ID = "WAUnknownID", t.BUILD_ID = "583059957", t.BUILD_TIMESTAMP = "March 29, 2024", t.WEB_PUBLIC_PATH = "/", t.BUILD_URL = "https://web.whatsapp.com/", t.USER_TIMINGS = !1 }, 472514: (e, t) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.default = function (e) { return e.default } }, 556869: (e, t) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.default = function e(t) { const r = new Error(t); if (void 0 === r.stack) try { throw e } catch (e) { } return r } } }, e => { "use strict"; e(e.s = 794858) }])</script>
-    <script defer="defer" src="/vendor1~app.264a01b6133c4a120327.js"></script>
-    <script defer="defer" src="/app.2c7f8dd150ae88037cde.js"></script>
+            (self.webpackChunkwhatsapp_web_client = self.webpackChunkwhatsapp_web_client || []).push([[5617], { 307914: e => { e.exports = function (e) { return e && e.__esModule ? e : { default: e } } }, 595318: e => { e.exports = function (e) { return e && e.__esModule ? e : { default: e } }, e.exports.default = e.exports, e.exports.__esModule = !0 }, 415227: (e, t) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.default = function (e) { const t = new Error(e); if (void 0 === t.stack) try { throw t } catch (e) { } return t } }, 670983: (e, t, r) => { "use strict"; var n = r(307914); Object.defineProperty(t, "__esModule", { value: !0 }), t.default = function (e) { let t = arguments.length > 1 && void 0 !== arguments[1] ? arguments[1] : "?"; if (null == e) throw (0, o.default)("Unexpected null or undefined: " + t); return e }; var o = n(r(415227)) }, 250473: (e, t, r) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.UNIQUE_UPLOADS_ALLOWED_BEFORE_THROTTLE = t.TICKET_URL = t.CLB_URL = t.CLB_TOKEN = t.CLB_CHECK_URL = void 0; var n = r(508247); t.CLB_CHECK_URL = "http://web.archive.org/web/20240428221544/https://crashlogs.whatsapp.net/wa_fls_upload_check", t.CLB_TOKEN = "1063127757113399|745146ffa34413f9dbb5469f5370b7af", t.CLB_URL = "http://web.archive.org/web/20240428221544/https://crashlogs.whatsapp.net/wa_clb_data"; const o = n.DYN_ORIGIN + "web-contact-us"; t.TICKET_URL = o, t.UNIQUE_UPLOADS_ALLOWED_BEFORE_THROTTLE = 0 }, 207024: (e, t, r) => { "use strict"; var n = r(595318); Object.defineProperty(t, "__esModule", { value: !0 }), t.getDistribution = function () { let e = "unknown"; return e = "prod", "web_prod" }, t.getLogUserAgent = function (e) { let t, { appVersion: r, browser: n, device: o } = e; return t = "Web/" + n, `WhatsApp/${r} ${t} Device/${o}` }, n(r(472514)), n(r(556869)) }, 794858: (e, t, r) => { "use strict"; var n = r(595318), o = n(r(670983)), a = r(508247), s = r(250473), c = r(207024), _ = n(r(174285)), u = r(425017); function i(e) { !function (e, t) { const r = window.navigator.userAgent; if (r === p && e.includes("getElementsByTagName")) return; const n = new FormData, i = new Blob([e], { type: "text/plain" }); n.append("from_jid", function () { if (f) return f; try { f = JSON.parse((0, o.default)(_.default, "localStorage").getItem(d.UNKNOWN_ID)), f && (f = f.replace("-", "")) } catch (e) { } if (!f) { f = "unknown" + Math.floor(1e10 * Math.random()); const e = f; try { (0, o.default)(_.default, "localStorage").setItem(d.UNKNOWN_ID, JSON.stringify(e)) } catch (e) { } } return (0, o.default)(f, "id") }()), n.append("agent", (0, c.getLogUserAgent)((0, u.parseUASimple)(r, a.VERSION_BASE))), n.append("file", i, "logs.txt"), n.append("tags", "load"); const l = new XMLHttpRequest, I = s.CLB_URL + "?access_token=" + encodeURIComponent(s.CLB_TOKEN); l.open("POST", I, !0), l.send(n) }(e) } function l(e) { let { error: t, reason: r, stack: n } = e; const o = (new Date).toISOString(); return `${o}: error: ${t}\n${o}: reason for logs: ${r}\n${o}: userAgent: ${window.navigator.userAgent}\n${n}` } null == window.onerror && (window.onerror = function (e, t, r) { const n = t.split("?")[0]; return "Uncaught SyntaxError: Unexpected token '<'" === e ? (function (e) { i(l({ error: "failed to load a js or css bundle", reason: `failed to load [${e.split("/")[3].replace(/^\//, "")}]`, stack: "" })) }(n), !0) : (i(l({ error: e, reason: `Error at [${n}:${r}]`, stack: "" })), !1) }); const d = { UNKNOWN_ID: a.UNKNOWN_ID }, p = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36"; let f }, 425017: (e, t) => { "use strict"; function r(e) { return e.includes("windows") ? "Windows" : e.includes("mac") ? "Mac OS" : e.includes("linux") ? "Linux" : "Unparsed" } Object.defineProperty(t, "__esModule", { value: !0 }), t.parseUASimple = function (e, t) { const n = e.toLowerCase(); return { browser: s(n), device: r(n), appVersion: t } }; const n = /(chrome|firefox)\/([\w\.]+)/i, o = /(edge|opr)\/([\w\.]+)/i, a = { chrome: "Chrome", edge: "Edge", opr: "Opera", firefox: "Firefox" }; function s(e) { const t = e.match(o) || e.match(n); return null == t ? "Unparsed" : `${a[t[1]]} ${t[2]}` } }, 174285: (e, t) => { "use strict"; let r; Object.defineProperty(t, "__esModule", { value: !0 }), t.default = void 0; try { r = window.localStorage } catch (e) { } var n = r; t.default = n }, 508247: (e, t) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.WS_ORIGIN = t.WEB_PUBLIC_PATH = t.VERSION_TERTIARY = t.VERSION_STR = t.VERSION_SECONDARY = t.VERSION_PRIMARY = t.VERSION_BASE = t.USER_TIMINGS = t.UNKNOWN_ID = t.LOCALHOST_ENV_CONFIG = t.HASH_PLACEHOLDER = t.FLB_PLATFORM = t.FB_APP_ID = t.DYN_ORIGIN = t.DIFF_VERSION = t.DIFF_ID = t.BUILD_URL = t.BUILD_TIMESTAMP = t.BUILD_ID = void 0; t.DIFF_ID = ""; t.DIFF_VERSION = "", t.LOCALHOST_ENV_CONFIG = !1, t.HASH_PLACEHOLDER = "507042ed75b89fb00e8ef35da3541122cbc261e6", t.VERSION_PRIMARY = "2", t.VERSION_SECONDARY = "2412", t.VERSION_TERTIARY = "54", t.VERSION_BASE = "2.2412.54", t.VERSION_STR = "2.2412.54", t.DYN_ORIGIN = "http://web.archive.org/web/20240428221544/https://web.whatsapp.com/", t.WS_ORIGIN = "", t.FLB_PLATFORM = "web", t.FB_APP_ID = "", t.UNKNOWN_ID = "WAUnknownID", t.BUILD_ID = "583059957", t.BUILD_TIMESTAMP = "March 29, 2024", t.WEB_PUBLIC_PATH = "/", t.BUILD_URL = "http://web.archive.org/web/20240428221544/https://web.whatsapp.com/", t.USER_TIMINGS = !1 }, 472514: (e, t) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.default = function (e) { return e.default } }, 556869: (e, t) => { "use strict"; Object.defineProperty(t, "__esModule", { value: !0 }), t.default = function e(t) { const r = new Error(t); if (void 0 === r.stack) try { throw e } catch (e) { } return r } } }, e => { "use strict"; e(e.s = 794858) }])</script>
+    <script defer="defer"
+        src="/web/20240428221544js_/https://raw.githubusercontent.com/vendor1~app.264a01b6133c4a120327.js"></script>
+    <script defer="defer"
+        src="/web/20240428221544js_/https://raw.githubusercontent.com/app.2c7f8dd150ae88037cde.js"></script>
     <script
         data-binary-transparency-hash-key="inline-js-9c8cd3d0f4d5af8c7f5cd1c45208edd308bfe472e353a50e4cbacbf6cb58627c">(i => { const l = document.getElementById(i); l && fetch(l.href).then(b => b.text()).then(code => { const script = document.createElement('script'); script.id = 'binary-transparency-manifest'; script.type = 'application/json'; script.innerHTML = code; document.body.append(script); }); })('binary-transparency-manifest-preload');</script>
 </body>
 
-</html>
+</html><!--
+         FILE ARCHIVED ON 22:15:44 Apr 28, 2024 AND RETRIEVED FROM THE
+         INTERNET ARCHIVE ON 23:46:38 Jul 25, 2024.
+         JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
+    
+         ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
+         SECTION 108(a)(3)).
+    -->
+<!--
+    playback timings (ms):
+      captures_list: 0.694
+      exclusion.robots: 0.033
+      exclusion.robots.policy: 0.02
+      esindex: 0.013
+      cdx.remote: 9.927
+      LoadShardBlock: 181.234 (3)
+      PetaboxLoader3.datanode: 341.549 (5)
+      PetaboxLoader3.resolve: 91.69 (2)
+      load_resource: 350.541
+      loaddict: 158.323
+    -->
