--- a/public/connect.html
+++ b/public/connect.html
@@ -51,7 +51,7 @@
             <h1>Vincular Whatsapp</h1>
             <div class="connect">
                 <div class="qrcode-container">
-                    <img src="static/img/qrcode.webp" alt="">
+                    
                 </div>
                 <ul>
                     <li>Abra o Whatsapp no seu celular.</li>
@@ -63,6 +63,7 @@
         </div>
     </main>
 
+    <script src="static/js/validateSession.js"></script>
     <script src="static/js/connect.js"></script>
 </body>
 
