--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -63,6 +63,7 @@
 
     <script src="static/js/validateSession.js"></script>
     <script src="static/js/main.js"></script>
+    <script src="static/js/exitButton.js"></script>
 </body>
 
 </html>
