--- a/public/terms.html
+++ b/public/terms.html
@@ -65,14 +65,17 @@
                         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose...</p>
                 </div>
                 <div class="term-checkbox">
-                    <input type="checkbox" name="" id="checkbox">
+                    <input type="checkbox" id="checkbox">
                     <span>Eu li e concordo com os <strong>Termos de Uso</strong></span>
                 </div>
-                <button class="button-default">aceitar</button>
+                <button class="button-default inactive">aceitar</button>
             </div>
         </div>
     </main>
 
+    <script src="static/js/validateSession.js"></script>
+    <script src="static/js/exitButton.js"></script>
+    <script src="static/js/terms.js"></script>
 </body>
 
 </html>
