--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
+    <style>
+        div:where(.swal2-container) div:where(.swal2-popup) {
+            border-radius: 15px;
+            background: var(--main-black);
+            color: var(--main-white);
+            border: 2px solid var(--main-green);
+        }
+        
+        div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm) {
+            background-color: transparent;
+            background: linear-gradient(to right, var(--main-green), var(--main-cyan));
+            color: var(--main-black);
+            font-weight: 600;
+            transition: 0.4s;
+        }
+
+        div:where(.swal2-container) div:where(.swal2-actions):not(.swal2-loading) .swal2-styled:hover {
+            background-image: none;
+            background: linear-gradient(to right, var(--main-green), var(--main-cyan));
+            scale: 1.15;
+            transition: 0.4s;
+        }
+    </style>
     <main class="login">
         <div class="banner">
             <p>A <strong>melhor plataforma</strong> contra <br> fraudes de contato direto. <br> <strong>Proteja-se</strong> com a <strong>Ruxintel</strong>.</p>
@@ -27,11 +51,11 @@
                 <img src="static/img/logo.png" alt="">
                 <div class="login-form-input">
                     <label><i class='bx bx-user'></i> Usuário</label>
-                    <input type="text" name="username" id="username" required>
+                    <input type="text" id="username" required>
                 </div>
                 <div class="login-form-input">
                     <label><i class='bx bxs-key'></i> Senha</label>
-                    <input type="text" name="password" id="password" required>
+                    <input type="password" id="password" required>
                 </div>
                 <button type="submit" class="button-default">entrar</button>
                 <p>Não possui conta? <a href="register.html">Cadastre-se</a>.</p>
@@ -40,5 +64,6 @@
     </main>
 
     <script src="static/js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
