subindo o front com dashboard
dashboard ja consumindo endpoint para recuperar mensagens criticas

--- a/public/register.html
+++ b/public/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruxintel - Register</title>
+    <title>Ruxintel - Registro</title>
 
     <link rel="stylesheet" href="static/css/colors.css">
     <link rel="stylesheet" href="static/css/components/button.css">
