--- a/public/connect.html
+++ b/public/connect.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruxintel - Connect</title>
+    <title>Ruxintel - Vincular Whatsapp</title>
 
     <link rel="icon" href="static/img/icon.png" type="image/x-icon">
 
