--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="static/css/components/cards.css">
     <link rel="stylesheet" href="static/css/components/navbar.css">
     <link rel="stylesheet" href="static/css/components/button.css">
+    <link rel="stylesheet" href="static/css/components/noMessages.css">
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
@@ -84,7 +85,7 @@
         <div class="container">
             <h1>Detecção em tempo real</h1>
             <div class="cards">
-               
+                
             </div>
         </div>
     </main>
