atualizando paths e url docker

--- a/public/connect.html
+++ b/public/connect.html
@@ -58,7 +58,7 @@
                     <span>extensão</span>
                 </li>
             </a>
-            <a href="/public/index.html">
+            <a href="index.html">
                 <li id="home">
                     <i class='bx bx-home' ></i>
                 </li>
