--- a/public/connect.html
+++ b/public/connect.html
@@ -1,100 +1,129 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruxintel - Vincular Whatsapp</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Ruxintel - Vincular Whatsapp</title>
 
-    <link rel="icon" href="static/img/icon.png" type="image/x-icon">
+        <link rel="icon" href="static/img/icon.png" type="image/x-icon" />
 
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+        <!-- fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
+            rel="stylesheet"
+        />
 
-    <!-- css -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="static/css/colors.css">
-    <link rel="stylesheet" href="static/css/main.css">
-    <link rel="stylesheet" href="static/css/connect.css">
-    <link rel="stylesheet" href="static/css/components/navbar.css">
-    <link rel="stylesheet" href="static/css/components/button.css">
-    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css" rel="stylesheet"> 
-</head>
-<body>
-    <style>
-        div:where(.swal2-container) div:where(.swal2-popup) {
-            border-radius: 15px;
-            background: var(--main-black);
-            color: var(--main-white);
-            border: 2px solid var(--main-green);
-        }
-        
-        div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm) {
-            background-color: transparent;
-            background: linear-gradient(to right, var(--main-green), var(--main-cyan));
-            color: var(--main-black);
-            font-weight: 600;
-            transition: 0.4s;
-        }
+        <!-- css -->
+        <link
+            href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="static/css/colors.css" />
+        <link rel="stylesheet" href="static/css/main.css" />
+        <link rel="stylesheet" href="static/css/connect.css" />
+        <link rel="stylesheet" href="static/css/components/navbar.css" />
+        <link rel="stylesheet" href="static/css/components/button.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <style>
+            div:where(.swal2-container) div:where(.swal2-popup) {
+                border-radius: 15px;
+                background: var(--main-black);
+                color: var(--main-white);
+                border: 2px solid var(--main-green);
+            }
 
-        div:where(.swal2-container) div:where(.swal2-actions):not(.swal2-loading) .swal2-styled:hover {
-            background-image: none;
-            background: linear-gradient(to right, var(--main-green), var(--main-cyan));
-            scale: 1.15;
-            transition: 0.4s;
-        }
+            div:where(.swal2-container)
+                button:where(.swal2-styled):where(.swal2-confirm) {
+                background-color: transparent;
+                background: linear-gradient(
+                    to right,
+                    var(--main-green),
+                    var(--main-cyan)
+                );
+                color: var(--main-black);
+                font-weight: 600;
+                transition: 0.4s;
+            }
 
-        body.swal2-height-auto {
-            height: -webkit-fill-available !important;
-        }
-    </style>
-    <!-- navbar -->
-    <nav class="navbar">
-        <ul>
-            <a href="https://chromewebstore.google.com/detail/zap-defender/fdplagmcgeboaohjimmneiecgkjhjlcl" target="_blank">
-                <li>
-                    <i class='bx bx-extension'></i>
-                    <span>extensão</span>
-                </li>
-            </a>
-            <a href="index.html">
-                <li id="home">
-                    <i class='bx bx-home' ></i>
-                </li>
-            </a>
-            <a href="#">
-                <li>
-                    <i class='bx bx-door-open'></i>
-                    <span>sair</span>
-                </li>
-            </a>
-        </ul>
-    </nav>
+            div:where(.swal2-container)
+                div:where(.swal2-actions):not(.swal2-loading)
+                .swal2-styled:hover {
+                background-image: none;
+                background: linear-gradient(
+                    to right,
+                    var(--main-green),
+                    var(--main-cyan)
+                );
+                scale: 1.15;
+                transition: 0.4s;
+            }
 
-    <!-- main -->
-    <main>
-        <h1 id="logo">Ruxintel</h1>
-        <div class="container">
-            <h1>Vincular Whatsapp</h1>
-            <div class="connect">
-                <div class="qrcode-container">
-                    
+            body.swal2-height-auto {
+                height: -webkit-fill-available !important;
+            }
+        </style>
+        <!-- navbar -->
+        <nav class="navbar">
+            <ul>
+                <a
+                    href="https://chromewebstore.google.com/detail/zap-defender/fdplagmcgeboaohjimmneiecgkjhjlcl"
+                    target="_blank"
+                >
+                    <li>
+                        <i class="bx bx-extension"></i>
+                        <span>extensão</span>
+                    </li>
+                </a>
+                <a href="index.html">
+                    <li id="home">
+                        <i class="bx bx-home"></i>
+                    </li>
+                </a>
+                <a href="#">
+                    <li>
+                        <i class="bx bx-door-open"></i>
+                        <span>sair</span>
+                    </li>
+                </a>
+            </ul>
+        </nav>
+
+        <!-- main -->
+        <main>
+            <h1 id="logo">Ruxintel</h1>
+            <div class="container">
+                <h1>Vincular Whatsapp</h1>
+                <div class="connect">
+                    <div class="qrcode-container">
+                        <img src="static/img/carregando.svg" alt="" />
+                    </div>
+                    <ul>
+                        <li>Abra o Whatsapp no seu celular.</li>
+                        <li>
+                            Toque no ícone "..." e, em seguida, em
+                            <strong>Aparalhos conectados</strong> >
+                            <strong>Conectar um aparelho</strong>.
+                        </li>
+                        <li>Desbloqueie seu celular.</li>
+                        <li>
+                            Aponte seu celular para a tela do aparelho que você
+                            deseja conectar para escanear o código QR.
+                        </li>
+                    </ul>
                 </div>
-                <ul>
-                    <li>Abra o Whatsapp no seu celular.</li>
-                    <li>Toque no ícone "..." e, em seguida, em <strong>Aparalhos conectados</strong> > <strong>Conectar um aparelho</strong>.</li>
-                    <li>Desbloqueie seu celular.</li>
-                    <li>Aponte seu celular para a tela do aparelho que você deseja conectar para escanear o código QR.</li>
-                </ul>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <script src="static/js/exitButton.js"></script>
-    <script src="static/js/validateSession.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
-    <script src="static/js/connect.js"></script>
-</body>
-
+        <script src="static/js/exitButton.js"></script>
+        <script src="static/js/validateSession.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
+        <script src="static/js/connect.js"></script>
+    </body>
 </html>
