--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -87,7 +87,7 @@
                     <i class="bx bx-home"></i>
                 </li>
 
-                <li id="sair" onclick="sair()">
+                <li id="sair" onclick="deslogar()">
                     <i class="bx bx-door-open"></i>
                     <span>sair</span>
                 </li>
